--- a/proj/my-app/public/index.html
+++ b/proj/my-app/public/index.html
@@ -15,29 +15,44 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    <style>
+      .chat-notification {
+        display: flex;
+        max-width: 24rem;
+        margin: 0 auto;
+        padding: 1.5rem;
+        border-radius: 0.5rem;
+        background-color: #fff;
+        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+      }
+      .chat-notification-logo-wrapper {
+        flex-shrink: 0;
+      }
+      .chat-notification-logo {
+        height: 3rem;
+        width: 3rem;
+      }
+      .chat-notification-content {
+        margin-left: 1.5rem;
+        padding-top: 0.25rem;
+      }
+      .chat-notification-title {
+        color: #1a202c;
+        font-size: 1.25rem;
+        line-height: 1.25;
+      }
+      .chat-notification-message {
+        color: #718096;
+        font-size: 1rem;
+        line-height: 1.5;
+      }
+    </style>
   </body>
 </html>
